# stochastics-labs

./: CMakeLists.txt  README.md  gachibass.cpp  lab1.cpp  lab2.cpp  out.txt
cli/: Cargo.toml
cli/src/: main.rs
rust_implementation/: Cargo.toml
rust_implementation/src/: main.rs  precision_test.rs
rust_implementation/src/shoeshine_shop/: mod.rs  utils.rs
rust_implementation/src/shoeshine_shop/statistics/: enums.rs  mod.rs
shoeshine_shop/: Cargo.toml
shoeshine_shop/src/: lib.rs  statistics.rs  utils.rs
shoeshine_shop/src/statistics/: enums.rs
shoeshine_shop/tests/: precision_test.rs
