[package]
name = "sim"
version = "1.0.0"
authors = ["rogday <rogday@test.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.7", features = [ "small_rng" ] }
rand_distr = "0.2"

enum-map = "0.6"
structopt = "0.3"
shoeshine_shop = {path = "../shoeshine_shop"}