[package]
name = "sim"
version = "1.0.0"
authors = ["rogday <rogday@test.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
rand_distr = "0.2"
ordered-float = "1.0"

itertools = "0.8.2"
structopt = "0.3"       #args

# too slow
# heapless = "0.5.1"
enum-map = "0.6.2"
either = "1.5.3"