[package]
name = "shoeshine_shop"
version = "1.0.0"
authors = ["rogday <rogday@test.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.7.3", features = [ "small_rng" ] }
rand_distr = "0.2.2"
ordered-float = "1.0.2"

itertools = "0.8.2"

enum-map = "0.6.2"
either = "1.5.3"
