[package]
name = "shoeshine_shop"
version = "1.0.0"
authors = ["rogday <rogday@test.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.7", features = [ "small_rng" ] }
rand_distr = "0.2"
ordered-float = "1.0"

itertools = "0.9"

enum-map = "0.6"
either = "1.5"

#optimizations
staticvec = "0.10"
arraydeque = "0.4"